--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,32 +17,36 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
       
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: us-east-1
       
       - name: Install SAM CLI
-        run: pip install --quiet aws-sam-cli
-      
-      - name: Install dependencies
+        run: pip install aws-sam-cli
+
+
+      - name: Generate package-lock.json
         run: |
-          npm install --no-fund --no-audit --quiet
-          npm cache clean --force
+          cd src
+          npm install --package-lock-only
+      
+      - name: Install Node.js dependencies
+        run: |
+          cd src
+          npm install
+          npm install aws-sdk
       
       - name: Build SAM application
-        run: sam build --quiet
+        run: sam build
       
       - name: Deploy SAM application
-        timeout-minutes: 10
         run: |
           sam deploy \
             --template-file template.json \
@@ -51,5 +55,4 @@ jobs:
               EnvironmentName=${{ matrix.environment }} \
               NotificationEmail=${{ secrets.NOTIFICATION_EMAIL }} \
             --capabilities CAPABILITY_IAM \
-            --no-confirm-changeset \
-            --no-fail-on-empty-changeset
+            --no-confirm-changeset
