--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy SAM application
         run: |
           sam deploy \
-            --template-file template.json \
+            --template-file Template.json \
             --stack-name s3-sns-notifier-${{ matrix.environment }} \
             --parameter-overrides \
               EnvironmentName=${{ matrix.environment }} \
